--- a/config/tidbit.conf
+++ b/config/tidbit.conf
@@ -11,14 +11,14 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 # # Display
-# #CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # # Turn on deep sleep
-# CONFIG_ZMK_SLEEP=y
-# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
 # # Set screen blanking to 15s instead of 30s
-# #CONFIG_ZMK_IDLE_TIMEOUT=15000
+CONFIG_ZMK_IDLE_TIMEOUT=20000
 
 # # Save settings after 3s instaed of 60s
 # CONFIG_ZMK_SETTINGS_SAVE_DEBOUNCE=3000
